--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,10 @@ h2{
 /* paragraphs */
 .paragraph-bg{
 background-color: #fff;
+
 }
+
+
 
 /* nav */
 
@@ -272,7 +275,7 @@ section .section-title{
 
 /*social*/
 .social-body{
-    background: url('../images/bg-social.jpeg') no-repeat center center fixed; 
+    background: url('../images/social2.jpeg')  no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -283,6 +286,8 @@ section .section-title{
     min-height: 100vh;
     
 }
+
+
 
 
 .container-1{
@@ -323,7 +328,7 @@ flex-wrap: wrap;
 
 .container-1 .icon .iconBx img{
     max-width: 100%;
-    filter: grayscale(1);
+    
     transition: 0.5s;
     transform: scale(0.8);
 }
@@ -359,7 +364,7 @@ flex-wrap: wrap;
 
 @media only screen and (max-width: 768px){
 
- .iconBx{width: calc(60% - 5px);
+ .container-1 .icon .iconBx{width: calc(60% - 5px);
  }
   
 }
@@ -550,6 +555,92 @@ transition: all 0.2s ease-out;
 .img-fluid:hover:before {
     transform: scale(2.15);
   }
+
+/* reviews */
+
+.carousel-item {
+  height: 65vh;
+  min-height: 350px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.body-reviews {
+  font-size: 1rem;
+  font-family: 'Oswald', sans-serif;
+  background: #f9f9f9;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+.container-reviews {
+  max-width: 1100px;
+  margin: auto;
+  overflow: auto;
+  padding: 0 2rem;
+}
+
+.img-reviews {
+  width: 100%;
+  
+}
+
+.card-reviews {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  background: #f1f1f1;
+  margin-bottom: 2rem;
+}
+
+.card-reviews h3 {
+  margin-bottom: 2rem;
+}
+
+.card-reviews img {
+  
+}
+
+.card-reviews > div {
+  padding: 2rem;
+}
+
+.card-reviews:nth-child(even) img {
+  order: 2;
+}
+
+
+.btn-reviews {
+  display: inline-block;
+  background: #000;
+  color: #fff;
+  padding: 0.8rem 1.8rem;
+  margin-top: 2rem;
+  cursor: pointer;
+}
+
+.btn-reviews:hover {
+  opacity: 0.8;
+}
+
+@media(max-width:600px) {
+  .card-reviews {
+    display: block;
+  }
+}
+
 
   /* contact page */
 .pb-100 {
