changing social body img

--- a/css/styles.css
+++ b/css/styles.css
@@ -275,7 +275,7 @@ section .section-title{
 
 /*social*/
 .social-body{
-    background: url('../images/social2.jpeg')  no-repeat center center fixed; 
+    background: url('../images/st.jpeg')  no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
