--- a/css/styles.css
+++ b/css/styles.css
@@ -58,14 +58,16 @@ background-color: #fff;
   position: relative;
   width: 100%;
   height: 100vh;
-  min-height: 35rem;
-  padding: 15rem 0;
   background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../images/gtr.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   
+}
+
+@media only screen and (max-width: 768px){
+    .masthead {background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../images/gtr-sm.jpeg");}
 }
 
 .masthead h1 {
