--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ background-color: #fff;
   position: relative;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../images/gtr.jpeg");
+  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../images/mustang-cobra.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -67,8 +67,10 @@ background-color: #fff;
 }
 
 @media only screen and (max-width: 768px){
-    .masthead {background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../images/gtr-sm.jpeg");}
+    .masthead {background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../images/mustang-mobile.jpeg");}
 }
+
+
 
 .masthead h1 {
   font-family: 'Varela Round';
