--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@ background-color: #fff;
 /* scroll down button */
 .circle{
     position: absolute;
-    bottom: 5%;
+   top: 0;
     left: 50%;
     transform: translate(-50%,-50%);
     
@@ -203,6 +203,84 @@ background-color: #fff;
     .circle{
         position: relative;
         top: 200px;
+    }
+}
+
+
+
+/*reviews scroll*/
+
+.circle-reviews{
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    
+    width: 60px;
+    height:60px;
+    text-align: center;
+    line-height: 60px;
+    font-size: 60px;
+    overflow: hidden;
+}
+
+.circle-reviews .fas {
+    color: #5bc0de;
+    margin: 0;
+    padding: 0;
+    animation: animate 2s linear infinite;
+}
+
+@keyframes animate 
+{
+    0%
+    {
+        transform: translateY(-50px);
+        text-shadow: 0 50px 0 #ff6363;
+    }
+    20%
+    {
+        transform: translateY(10px);
+        text-shadow: 0 10px 0 #ff6363;
+    }
+    40%
+    {
+        transform: translateY(10px);
+        text-shadow: 0 -10px 0 #ff6363;
+    }
+    60%
+    {
+        transform: translateY(10px);
+        text-shadow: 0 0px 0 #ff6363;
+    }
+    100%
+    {
+        transform: translateY(100px);
+        text-shadow: 0 -50px 0 #ff6363;
+    }
+}
+
+.circle-reviews:before {
+ content: 'SCROLL DOWN';
+ position: absolute;
+ color: #000;
+ font-family: Arial, Helvetica, sans-serif;
+ font-size: 8px;
+ left: 10px;
+ top: 12px;
+}
+
+@media only screen and (min-width: 600px){
+    .circle-reviews{
+        position: relative;
+        top: 50px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .circle-reviews{
+        position: relative;
+        top: 50px;
     }
 }
 
