adding new home photo

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,10 @@ background-color: #fff;
 }
 
 
+.bg-black{
+    color: #000!important;
+}
+
 
 /* nav */
 
@@ -58,7 +62,7 @@ background-color: #fff;
   position: relative;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../images/red-must.jpeg");
+  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../images/bmw-tips.JPG");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
